// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/atoms/Button Primary 1`] = `
<div
  className="sc-bdVaJa fkRMdE"
>
  <button
    className="sc-htpNat eNQEjT"
    color="primary"
  >
    <span
      className="sc-ifAKCX llBRr"
    >
      Primary Button
    </span>
  </button>
  <div
    className="sc-bwzfXH cyotrw"
  />
</div>
`;

exports[`Storyshots @components/atoms/Button Secondary 1`] = `
<div
  className="sc-bdVaJa fkRMdE"
>
  <button
    className="sc-htpNat sc-bxivhb fcoXHK"
    color="secondary"
  >
    <span
      className="sc-ifAKCX llBRr"
    >
      Secondary Button
    </span>
  </button>
  <div
    className="sc-bwzfXH cyotrw"
  />
</div>
`;

exports[`Storyshots @components/atoms/IconSvg example svg 1`] = `
<div
  className="sc-bdVaJa fkRMdE"
>
  <div
    className="sc-EHOje jIEIwM"
  />
  <div
    className="sc-bwzfXH cyotrw"
  />
</div>
`;

exports[`Storyshots @components/atoms/Loader default 1`] = `
<div
  className="sc-bdVaJa fkRMdE"
>
  <div
    className="sc-bZQynM jYtkKU"
  >
    <div
      className="sc-gzVnrw NdYuc"
    >
      <span />
      <span />
      <span />
    </div>
  </div>
  <div
    className="sc-bwzfXH cyotrw"
  />
</div>
`;

exports[`Storyshots @components/atoms/Message error 1`] = `
<div
  className="sc-bdVaJa fkRMdE"
>
  <div
    className="sc-htoDjs dYOgaz"
  >
    <p
      className="sc-dnqmqq voifR"
    >
      Sample Message
    </p>
    <div
      className="sc-EHOje sc-iwsKbI hRwuVo"
      onClick={[Function]}
    />
  </div>
  <div
    className="sc-bwzfXH cyotrw"
  />
</div>
`;

exports[`Storyshots @components/atoms/Message neutral 1`] = `
<div
  className="sc-bdVaJa fkRMdE"
>
  <div
    className="sc-htoDjs jUSbIr"
  >
    <p
      className="sc-dnqmqq voifR"
    >
      Sample Message
    </p>
    <div
      className="sc-EHOje sc-iwsKbI hRwuVo"
      onClick={[Function]}
    />
  </div>
  <div
    className="sc-bwzfXH cyotrw"
  />
</div>
`;

exports[`Storyshots @components/atoms/Message success 1`] = `
<div
  className="sc-bdVaJa fkRMdE"
>
  <div
    className="sc-htoDjs flqwzg"
  >
    <p
      className="sc-dnqmqq voifR"
    >
      Sample Message
    </p>
    <div
      className="sc-EHOje sc-iwsKbI hRwuVo"
      onClick={[Function]}
    />
  </div>
  <div
    className="sc-bwzfXH cyotrw"
  />
</div>
`;

exports[`Storyshots @components/atoms/SocialMediaIcon default 1`] = `
<div
  className="sc-bdVaJa fkRMdE"
>
  <a
    aria-label="facebook"
    href="https://www.facebook.com/mirumeelabs/"
    target="_blank"
  >
    <div
      className="sc-EHOje sc-gqjmRU dCApik"
    />
  </a>
  <div
    className="sc-bwzfXH cyotrw"
  />
</div>
`;
